# modsAndDemods

./: .gitmodules  README.md
AnalogTVdemod/: .gitignore  Makefile  README.md  TVdemod.c  build.sh  buildCS.sh  txtToImage.cs
GFSKdemod/: CMakeLists.txt  README.md  main.cpp
GFSKmod/: CMakeLists.txt  README.md  main.cpp
PSKmod/: CMakeLists.txt  README.md  main.cpp  softDecoder.cpp
